// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NumericalInput render Snapshot: Default 1`] = `
<div
  className=""
  data-swarm-number-input="default"
>
  <input
    data-swarm-number-input-field={true}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    pattern="[0-9]*"
    step={1}
    type="number"
    value=""
  />
  <button
    data-swarm-number-input-decrement={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    tabIndex={-1}
  >
    <Icon
      shape="minus"
    />
  </button>
  <button
    data-swarm-number-input-increment={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    tabIndex={-1}
  >
    <Icon
      shape="add"
    />
  </button>
</div>
`;

exports[`NumericalInput render Snapshot: Default with classname 1`] = `
<div
  className="foo"
  data-swarm-number-input="default"
>
  <input
    data-swarm-number-input-field={true}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    pattern="[0-9]*"
    step={1}
    type="number"
    value=""
  />
  <button
    data-swarm-number-input-decrement={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    tabIndex={-1}
  >
    <Icon
      shape="minus"
    />
  </button>
  <button
    data-swarm-number-input-increment={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    tabIndex={-1}
  >
    <Icon
      shape="add"
    />
  </button>
</div>
`;

exports[`NumericalInput render Snapshot: Default with id 1`] = `
<div
  className=""
  data-swarm-number-input="default"
>
  <input
    data-swarm-number-input-field={true}
    id="foo"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    pattern="[0-9]*"
    step={1}
    type="number"
    value=""
  />
  <button
    data-swarm-number-input-decrement={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    tabIndex={-1}
  >
    <Icon
      shape="minus"
    />
  </button>
  <button
    data-swarm-number-input-increment={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    tabIndex={-1}
  >
    <Icon
      shape="add"
    />
  </button>
</div>
`;

exports[`NumericalInput render Snapshot: Default with max 1`] = `
<div
  className=""
  data-swarm-number-input="default"
>
  <input
    data-swarm-number-input-field={true}
    max={10}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    pattern="[0-9]*"
    step={1}
    type="number"
    value=""
  />
  <button
    data-swarm-number-input-decrement={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    tabIndex={-1}
  >
    <Icon
      shape="minus"
    />
  </button>
  <button
    data-swarm-number-input-increment={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    tabIndex={-1}
  >
    <Icon
      shape="add"
    />
  </button>
</div>
`;

exports[`NumericalInput render Snapshot: Default with min 1`] = `
<div
  className=""
  data-swarm-number-input="default"
>
  <input
    data-swarm-number-input-field={true}
    min={1}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    pattern="[0-9]*"
    step={1}
    type="number"
    value=""
  />
  <button
    data-swarm-number-input-decrement={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    tabIndex={-1}
  >
    <Icon
      shape="minus"
    />
  </button>
  <button
    data-swarm-number-input-increment={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    tabIndex={-1}
  >
    <Icon
      shape="add"
    />
  </button>
</div>
`;

exports[`NumericalInput render Snapshot: Default with onBlur 1`] = `
<div
  className=""
  data-swarm-number-input="default"
>
  <input
    data-swarm-number-input-field={true}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    pattern="[0-9]*"
    step={1}
    type="number"
    value=""
  />
  <button
    data-swarm-number-input-decrement={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    tabIndex={-1}
  >
    <Icon
      shape="minus"
    />
  </button>
  <button
    data-swarm-number-input-increment={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    tabIndex={-1}
  >
    <Icon
      shape="add"
    />
  </button>
</div>
`;

exports[`NumericalInput render Snapshot: Default with step 1`] = `
<div
  className=""
  data-swarm-number-input="default"
>
  <input
    data-swarm-number-input-field={true}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    pattern="[0-9]*"
    step={2}
    type="number"
    value=""
  />
  <button
    data-swarm-number-input-decrement={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    tabIndex={-1}
  >
    <Icon
      shape="minus"
    />
  </button>
  <button
    data-swarm-number-input-increment={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    tabIndex={-1}
  >
    <Icon
      shape="add"
    />
  </button>
</div>
`;

exports[`NumericalInput render Snapshot: Disabled 1`] = `
<div
  className=""
  data-swarm-number-input="disabled"
>
  <input
    data-swarm-number-input-field={true}
    disabled={true}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    pattern="[0-9]*"
    step={1}
    type="number"
    value=""
  />
  <button
    data-swarm-number-input-decrement={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    tabIndex={-1}
  >
    <Icon
      shape="minus"
    />
  </button>
  <button
    data-swarm-number-input-increment={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    tabIndex={-1}
  >
    <Icon
      shape="add"
    />
  </button>
</div>
`;

exports[`NumericalInput render Snapshot: Error 1`] = `
<div
  className=""
  data-swarm-number-input="error"
>
  <input
    data-swarm-number-input-field={true}
    error={true}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    pattern="[0-9]*"
    step={1}
    type="number"
    value=""
  />
  <button
    data-swarm-number-input-decrement={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    tabIndex={-1}
  >
    <Icon
      shape="minus"
    />
  </button>
  <button
    data-swarm-number-input-increment={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    tabIndex={-1}
  >
    <Icon
      shape="add"
    />
  </button>
</div>
`;
